# OTUS_Basic_DZ_05

./: CMakeLists.txt  README.md  chrono_example.cpp  random_shuffle.cpp
Include/: IStatistics.h  Max.h  Mean.h  Min.h  Pct90.h  Pct95.h  Std.h
src/: Max.cpp  Mean.cpp  Min.cpp  Pct90.cpp  Pct95.cpp  Std.cpp  main.cpp
